heading spacing fix

--- a/css/_type.scss
+++ b/css/_type.scss
@@ -134,7 +134,7 @@
         font-weight: normal;
 		clear: both; // this is needed for headings between floated content areas
 		line-height: 1.3;
-		margin-bottom: 1.5em;
+		margin-top: 2em;
 	}
 	.heading {
 		@include huge-type();
