--- a/css/style.css
+++ b/css/style.css
@@ -516,7 +516,7 @@ h1, h2, h3, h4, h5, h6, .heading {
   font-weight: normal;
   clear: both;
   line-height: 1.3;
-  margin-bottom: 1.5em; }
+  margin-top: 2em; }
 
 .heading {
   font-size: 2.2rem;
